fixed the top picture to be able to stretch more

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 .banner {
+    display: flex; 
     height: 500px; 
     position: relative;
     width: 100%; 
@@ -25,36 +26,35 @@ h1 {
 }
 
 .content {
+    display: flex; 
+    align-items: center;
     background-color: #fff;
     color: black;
-    height: 450px; 
-    padding-top: 130px; 
+    height: 475px; 
     position: relative;
     text-align: left; 
     width: 100%; 
 }
 
 .content img {
-    float: left; 
-    margin-left: 15px; 
+    margin-left: 20px; 
     width: 350px;
     height: 350px; 
     border-radius: 50%;
 }
 
 .content h2 {
-    
-    font-size: 30px;
-    margin: 0; 
-    margin-bottom: 30px; 
+    font-size: 60px;
+    margin: 20px;  
     font-family: "Abril Fatface", cursive;
 }
 
 .content p {
-    padding: 0 180px; 
-    
+    padding: 5px; 
     font-family: "Abril Fatface", cursive;
     line-height: 2;
+    font-size: 20px; 
+    margin-top: 20px;
 }
 
 .content:before{
@@ -77,4 +77,33 @@ h1 {
     right: 0; 
     background: #fff;
     transform: skewY(-7deg); 
+}
+
+@media screen and (max-width: 320px) {
+    flex-direction: column;
+    
+}
+
+@media screen and (min-width: 1550px) {
+    .content:before{
+        position: absolute;
+        content: "";
+        width: 60%;
+        height: 125px; 
+        top: -40px; 
+        left: 0; 
+        background: #fff;
+        transform: skewY(6deg); 
+    }
+
+    .content:after{
+        position: absolute;
+        content: "";
+        width: 60%;
+        height: 125px; 
+        top: -40px; 
+        right: 0; 
+        background: #fff;
+        transform: skewY(354deg); 
+    }
 }
